--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
   max-width: 420px;
-  margin: 30px auto;
-  padding: 10px;
+  margin: 50px auto;
+  padding: 0;
   border-radius: 4px;
   background-color: #00d8d8;
 }
+
 h1 {
   font-size: 60px;
   color: black;
@@ -47,7 +48,7 @@ li {
   border-radius: 4px;
   font-size: 13px;
   font-family: "Roboto", sans-serif;
-  background-color: #d2fafa;
+  background-color: #e2fafa;
   transition: all 150ms ease-in-out;
 }
 .col-sm:hover {
@@ -61,12 +62,14 @@ img {
   margin: 0 auto;
 }
 p {
-  text-align: center;
-  font-size: 10px;
+  text-align: right;
+  margin: 0 auto;
   font-family: "Roboto", sans-serif;
-}
-a {
-  font-size: 12px;
+  position: relative;
+  font-size: 15px;
+  color: #fff;
+  font-weight: 500;
+  text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
 }
 .units {
   text-align: center;
@@ -87,10 +90,17 @@ a {
   padding: 15px;
   border-radius: 7px;
 }
-.learn-more {
-  text-decoration: none;
-  color: #00d8d8;
+.local {
+  position: absolute;
+  top: 44px;
+  margin: 0 auto;
+  font-size: 20px;
+  color: #fff;
 }
-.learn-more:hover {
-  text-decoration: underline;
+#cities {
+  font-size: 17px;
+  font-style: italic;
+}
+#api {
+  font-size: 10px;
 }
